[project]
name = "timemanagerwindows"
version = "0.1.0"
description = ""
authors = [
    {name = "daniil",email = "wwcern0vdan11lzxc@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pywin32 (>=311,<312)",
    "psutil (>=7.1.0,<8.0.0)",
    "PyQt5 (>=5.15,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
